# iota-simulator

./: .dockerignore  Cargo.toml  README.md  build.rs
lib/: base.go  go.mod  go.sum  iota_simulator.h  simulator.go  simulator_test.go
lib/lib/: .gitignore
native/: Cargo.toml  Dockerfile  build.rs
native/src/: handlers.rs  lib.rs  registry.rs  sim_handlers.rs
src/: consts.rs  fake_faucet.rs  main.rs  simulacrum.rs  simulacrum_control_api.rs  simulacum_reader_wrapper.rs
