[package]
name = "iota-l1-simulator"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[dependencies]
simulacrum = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
serde = "1.0"
serde_json = "1.0"
serde_with = "3.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
bcs = "0.1"

# IOTA dependencies from the repository
iota-indexer = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta", features = ["shared_test_runtime"] }
iota-json-rpc = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta", features = [] }
iota-json-rpc-api = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta", features = [] }
iota-json-rpc-types = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta", features = [] }
iota-json = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-types = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-metrics = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
jsonrpsee = { version = "0.24", features = ["server", "macros", "client", "ws-client", "http-client", "full"] }
iota-rest-api = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-faucet = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta", features = [] }
iota-data-ingestion-core = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-open-rpc = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-package-resolver = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-protocol-config = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-transaction-builder = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
move-binary-format = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
move-bytecode-utils = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
move-core-types = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
telemetry-subscribers = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-sdk = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
prometheus = "0.13.4"
tempfile = "3.12.0"
iota-core = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }

iota-config = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-keys = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-move-build = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-swarm-config = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-test-transaction-builder = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
test-cluster = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
anyhow = "1.0.89"
env_logger = "0.11.6"
axum = "0.8.1"

[package.metadata.cargo-udeps.ignore]
development = ["simulacrum"]

