[package]
name = "iota-l1-simulator"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[dependencies]
simulacrum = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
serde = "1.0"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }

# IOTA dependencies from the repository
iota-indexer = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta", features = ["shared_test_runtime"] }
iota-types = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-metrics = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
jsonrpsee = { version = "0.24", features = ["server", "macros", "client", "ws-client", "http-client"] }
iota-rest-api = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
iota-faucet = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta", features = [] }
move-core-types = { git = "https://github.com/iotaledger/iota", tag = "v0.9.2-beta" }
prometheus = "0.13.4"
tempfile = "3.12.0"
env_logger = "0.11.6"
axum = "0.8.1"
signal-hook = "0.3.17"

[package.metadata.cargo-udeps.ignore]
development = ["simulacrum"]

